--- a/ZombieBattleUnity.csproj
+++ b/ZombieBattleUnity.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Assets\C# Script\DefaultVelocity.cs" />
     <Compile Include="Assets\C# Script\EnemyAttacking.cs" />
     <Compile Include="Assets\C# Script\Firing.cs" />
+    <Compile Include="Assets\C# Script\GameController.cs" />
     <Compile Include="Assets\C# Script\Grass.cs" />
     <Compile Include="Assets\C# Script\Health.cs" />
     <Compile Include="Assets\C# Script\MenuButtons.cs" />
