--- a/ZombieBattleUnity.csproj
+++ b/ZombieBattleUnity.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Assets\C# Script\MenuButtons.cs" />
     <Compile Include="Assets\C# Script\MoneyCollect.cs" />
     <Compile Include="Assets\C# Script\MoneySpawn.cs" />
+    <Compile Include="Assets\C# Script\MusicBattle.cs" />
     <Compile Include="Assets\C# Script\MusicPlay.cs" />
     <Compile Include="Assets\C# Script\playerMovement.cs" />
   </ItemGroup>
