--- a/ZombieBattleUnity.csproj
+++ b/ZombieBattleUnity.csproj
@@ -235,7 +235,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AudioManager.cs" />
+    <Compile Include="Assets\C# Script\AudioManager.cs" />
     <Compile Include="Assets\C# Script\BuildInfo.cs" />
     <Compile Include="Assets\C# Script\BuildMenu.cs" />
     <Compile Include="Assets\C# Script\BulletDamage.cs" />
@@ -251,6 +251,7 @@
     <Compile Include="Assets\C# Script\MusicBattle.cs" />
     <Compile Include="Assets\C# Script\MusicPlay.cs" />
     <Compile Include="Assets\C# Script\playerMovement.cs" />
+    <Compile Include="Assets\C# Script\Sounds.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
